--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
 :root {
     --background: black;
     --background-game: #537636;
-    --buttons: #315f0c;
+    --buttons: #527535;
 }
 
 body {
@@ -47,22 +47,72 @@ button {
     font-family: 'Montserrat', sans-serif;
 }
 .buttons {
-    display: flex;
-    padding: 5px;
+    display: grid;
+    grid-template: repeat(3, 50px) / repeat(3, 90px);
+    grid-template-areas: 
+        " . up ."
+        "left down right"
+        " restart . start";
+    gap: 5px;
+    align-items: center;
+    justify-items: center;
+    font-weight: 500;
 }
-.star-restart {
-    flex-direction: column;
+#up, #left, #right, #down {
+    width: 80px;
+    height:50px;
+}
+#up {
+    grid-area: up;
+}
+#left {
+    grid-area: left;
+}
+#right {
+    grid-area: right;
+}
+#down {
+    grid-area: down;
+}
+#start {
+    grid-area: start;
+    margin-top: 30px;
+    background-color: rgb(239, 98, 59);
+}
+#restart {
+    grid-area: restart;
+    display: flex;
+    margin-top: 30px;
+    justify-self: end;
+    background-color: rgb(224, 239, 59);
+}
+
+.instrucion {
+    display: flex;
+}
+.instrucion p {
+    margin: 15px;
+}
+.instrucion button {
+    margin: 10px
+}
+.instrucion .start-desktop {
+    background-color: rgb(239, 98, 59);
+}
+.instrucion .restart-desktop {
+    background-color: rgb(224, 239, 59);
 }
 
 .messages {
     width: auto;
     height: auto;
-    font-size: 2rem;
+    font-size: 16px;
+    font-weight: 600;
     display: flex;
     flex-direction: column;
-    background-color: rgb(53, 139, 53);
+    background-color: black;
     border-radius: 10px;
-
+    color: rgb(239, 98, 59);
 }
 
 .messages p {
@@ -71,3 +121,25 @@ button {
     font-weight: 15px; 
 }
 
+.instrucion {
+    color: white;
+    font-size: 24px;
+}
+
+/*Queries*/
+
+@media (max-width: 425px) {
+    #game {
+        width: 100%;
+    }
+}
+@media (min-width: 1000px) {
+    .buttons {
+        display: none;
+    }
+}
+@media (max-width: 1000px) {
+    .instrucion {
+        display: none;
+    }
+}
